---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var b : boolean\nvar r : real\n\nvar _e00 : int := b\nvar _e01 : int := r\n"

---
ty_nodes:
    TypeId(HirId(Idx::<HirNode>(0))) TyRef(Boolean)
    TypeId(HirId(Idx::<HirNode>(2))) TyRef(Real(Real))
    TypeId(HirId(Idx::<HirNode>(4))) TyRef(Int(Int))
    TypeId(HirId(Idx::<HirNode>(7))) TyRef(Int(Int))
def_kinds:
    DefId(0) Var(TyRef(Boolean))
    DefId(1) Var(TyRef(Real(Real)))
    DefId(2) Var(TyRef(Int(Int)))
    DefId(3) Var(TyRef(Int(Int)))
error at 48..49: mismatched types
| note for 41..44: initializer's type is incompatible with this type
error at 68..69: mismatched types
| note for 61..64: initializer's type is incompatible with this type
